--- a/sales.html
+++ b/sales.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Sales Page</title>
 </head>
 <body>
@@ -11,23 +13,25 @@
         <!-- <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="Fish Image"> -->
     </header>
     <main>
-        <div>
-            <ul id = "seattle">
+        <div id = "container">
+            <!-- <table>
+                <tr>
+                    <th>
 
+                    </th>
+                    <th>
+                        6am
+                    </th>
+                    <th>
+                        7am
+                    </th>
+                </tr>
+                <tr>
+                    <td>seattle
 
-            </ul>
-            <ul id = "tokyo">
-
-            </ul>
-            <ul id = "dubai">
-
-            </ul>
-            <ul id = "paris">
-
-            </ul>
-            <ul id = "lima">
-
-            </ul>
+                    </td>
+                </tr>
+            </table> -->
         </div>
     </main>
     <script src="js/app.js"></script>
