--- a/index.html
+++ b/index.html
@@ -1,99 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styleMain.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Salmon Cookies</title>
-    <style>
-        body {
-            background-color: aliceblue;
-        }
 
-        header {
-            background-color: cadetblue;
-        }
-
-        h1 {
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            /* background-color: brown; */
-            font-weight: bolder;
-            font-size: 35px;
-        }
-
-        ul {
-            position: relative;
-        }
-
-        nav ul li {
-            display: inline-block;
-            padding: 20px;
-            margin-left: 220px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: cornsilk;
-        }
-
-        h2 {
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 25px;
-            font-weight: bold;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            margin-bottom: 10px;
-        }
-
-        #locations {
-            position: relative;
-        }
-
-        #locations li {
-            display: inline-block;
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: bold;
-            text-align: center;
-            padding: 20px;
-            margin-left: 50px;
-            margin-bottom: 20px;
-        }
-
-        h3 {
-            font-size: 20px;
-            font-weight: bold;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        li p {
-            margin: 30px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            font-style: italic;
-        }
-
-        footer {
-            background-color: cadetblue;
-        }
-
-        footer p {
-            text-align: center;
-            font-weight: bold;
-        }
-
-        footer li {
-            text-align: center;
-            font-weight: bold;
-        }
-    </style>
 </head>
 
 <body>
