--- a/sales.html
+++ b/sales.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Sales Page</title>
 </head>
 <body>
     <header>
         <!-- <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="Fish Image"> -->
+        <h1>Sales Page</h1>
     </header>
     <main>
-        <form  id = "form">
+        <form  id = "form" >
             <fieldset>
+                <legend>Sales Input</legend>
                 <label for="branchName"> Branch Name</label>
                 <input type="text" id="branchName" name = "branchName" required>
                 <br>
@@ -32,7 +35,7 @@
                 <input type="number" id="avgCookies" name="avgCookies" step=".01" required>
                 <br>
                 <br>
-                <input type="submit" value = "add">
+                <input type="submit" value = "add" id = "btnAdd">
                 <br>
                 <br>
 
@@ -43,7 +46,10 @@
         <div id = "container">
             
         </div>
-        
+        <p style="font-family: Georgia, 'Times New Roman', Times, serif ; font-weight: bold; text-align: center;">Go Back To Home Page: <a href="index.html" style="text-decoration: none;">Click Link</a></p>
+        <footer>
+            <p>&#169; COPYRIGHT 2021</p>
+        </footer>
     </main>
     <script src="js/app.js"></script>
 </body>
